--- a/blog.html
+++ b/blog.html
@@ -12,8 +12,7 @@
                 <span id="tagline">Tu blog de maestro</span>
         </div>
         <div id="post">
-            <h1>Este es el titulo
-                atractivo e interesante del post 
+            <h1>Bienvenido
             </h1>
             <p>Y este es el parrafo de inicio donde
                 vamos a explicar las cosas increibles
