--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-                <span id="tagline">Tu blog de maestro</span>
+                <span id="tagline">Tu blog de maestro 2.0</span>
         </div>
         <div id="post">
             <h1>Bienvenido
