--- a/blog.html
+++ b/blog.html
@@ -2,17 +2,18 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <title>Page Title</title>
+    <title>Bienvenido a Hyperblog 2.0</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png" />
             Hyperblog
                 <span id="tagline">Tu blog de maestro 2.0</span>
         </div>
         <div id="post">
-            <h1>Bienvenido
+            <h1>Este es el título atractivo e interesante del post
             </h1>
             <p>Y este es el parrafo de inicio donde
                 vamos a explicar las cosas increibles
